# Dev

./: .gitignore  DevOS Presentation.pptx  DevOS-TZ-Architecture.md  Makefile  build.sh  generate_infra_data.sh  generate_test_data.sh  run_vm.sh
.github/workflows/: d-ci-demo.yml  release.yml
devo-security/: Cargo.toml  SCENARIO.md  setup_lab.sh
devo-security/d-paladin/: Cargo.toml
devo-security/d-paladin/src/: grid.rs  main.rs  network_defense.rs
devo-security/d-ransom/: Cargo.toml
devo-security/d-ransom/src/: main.rs  worm.rs
devo-security/simulation/: docker-compose.yml
devo-security/vuln-app/: Cargo.toml
devo-security/vuln-app/src/: main.rs
iso-profile/: packages.x86_64  profiledef.sh
tools/: d-ci.txt  d-env.txt  d-shark.txt  d-top.txt  go.work  go.work.sum  tree.txt
tools/d-ci/: go.mod  go.sum
tools/d-ci/cmd/d-ci/: main.go
tools/d-ci/internal/config/: loader.go
tools/d-ci/internal/domain/: models.go
tools/d-ci/internal/providers/: github.go  gitlab.go  mock.go
tools/d-ci/internal/ui/: model.go
tools/d-crypt/: Cargo.toml  my_sec_proj.dcr
tools/d-crypt/my_sec_proj/: a.txt
tools/d-crypt/src/: main.rs
tools/d-crypt/src/archive/: archiver.rs
tools/d-crypt/src/core/: crypto.rs  ledger.rs  mod.rs  shamir.rs
tools/d-crypt/src/models/: block.rs  container.rs  mod.rs
tools/d-env/: go.mod
tools/d-env/cmd/d-env/: main.go
tools/d-env/internal/analyzer/: detect.go
tools/d-env/internal/git/: client.go
tools/d-env/internal/ui/: model.go
tools/d-guard/: Dockerfile  config.js  go.mod  go.sum  report.html  secret.key
tools/d-guard/cmd/d-guard/: main.go
tools/d-guard/internal/: orchestrator.go
tools/d-guard/internal/core/: models.go
tools/d-guard/internal/git/: diff.go
tools/d-guard/internal/reporters/: html.go
tools/d-guard/internal/tools/: gitleaks.go  manager.go  semgrep.go
tools/d-recon/: MaxSonchik.txt  go.mod  go.sum
tools/d-shark/: Cargo.toml  capture_23-31-44.dshark  capture_23-31-51.dshark
tools/d-shark/src/: firewall.rs  main.rs  storage.rs
tools/d-shark/src/analysis/: process.rs
tools/d-shark/src/capture/: engine.rs  mod.rs  model.rs
tools/d-shark/src/ui/: app.rs
tools/d-top/: go.mod  go.sum
(+43 files in other folders)
