[package]
name = "d-paladin"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
notify = "6.1"       # Слежение за файловой системой
entropy = "0.4"      # Анализ энтропии
chrono = "0.4"
sysinfo = "0.30"     # Для убийства процессов
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"