[package]
name = "d-crypt"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rpassword = "7.0"
colored = "2.0"
aes-gcm = "0.10"
rand = "0.8"
pbkdf2 = "0.12"
hmac = "0.12"
sha2 = "0.10"
sss-rs = "0.8"
hex = "0.4"
tar = "0.4"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
walkdir = "2.4"
uuid = { version = "1.4", features = ["v4", "serde"] }
sysinfo = "0.29"
# НОВАЯ ЗАВИСИМОСТЬ ДЛЯ UI
inquire = "0.6"