[package]
name = "d-shark"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.26"
crossterm = "0.27"
chrono = "0.4"
users = "0.11"
pcap = "1.1"
etherparse = "0.13"
tempfile = "3.10"
zip = "0.6"
# Новые зависимости
sysinfo = "0.30" 
bytesize = "1.3"

# Netlink
netlink-sys = "0.8"
netlink-packet-core = "0.7"
netlink-packet-sock-diag = "0.4"
netlink-packet-utils = "0.5"